--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <a href="#" class="icon" id="github">
                         <i class="fa-brands fa-github"></i>
                     </a>
-                    <a href="#" class="icon" id="linkedin">
+                    <a href="https://github.com/mansi-sinha-dev" class="icon" id="linkedin">
                         <i class="fa-brands fa-linkedin"></i>
                     </a>
                     <a href="#" class="icon" id="instagram">
