--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
                     <a href="#" class="icon" id="facebook">
                         <i class="fa-brands fa-facebook"></i>
                     </a>
-                    <a href="#" class="icon" id="github">
+                    <a href="https://github.com/mansi-sinha-dev" class="icon" id="github">
                         <i class="fa-brands fa-github"></i>
                     </a>
-                    <a href="https://github.com/mansi-sinha-dev" class="icon" id="linkedin">
+                    <a href="www.linkedin.com/in/mansi-sinha" class="icon" id="linkedin">
                         <i class="fa-brands fa-linkedin"></i>
                     </a>
-                    <a href="#" class="icon" id="instagram">
-                        <i class="fa-brands fa-instagram"></i>
+                    <a href="https://www.hackerrank.com/profile/mansisinha653" class="icon" id="hackerrank">
+                        <i class="fa-brands fa-hackerrank"></i>
                     </a>
                     <a href="#" class="icon" id="telegram">
                         <i class="fa-brands fa-telegram"></i>
